# TucanoEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  ROADMAP.md  vcpkg.json
Examples/: .gitignore  CMakeLists.txt  README.md
Examples/Source/Audio/: CMakeLists.txt  Main.cpp
Examples/Source/Common/: B3DCameraFlyer.cpp  B3DCameraFlyer.h  B3DExampleFramework.h  B3DFPSCamera.cpp  B3DFPSCamera.h  B3DFPSWalker.cpp  B3DFPSWalker.h  B3DObjectRotator.cpp  B3DObjectRotator.h  BsExampleConfig.h  CMakeLists.txt  CMakeSources.cmake
Examples/Source/CustomMaterials/: CMakeLists.txt  Main.cpp
Examples/Source/Decals/: CMakeLists.txt  Main.cpp
Examples/Source/GUI/: CMakeLists.txt  Main.cpp
Examples/Source/Lighting/: CMakeLists.txt  Main.cpp
Examples/Source/LowLevelRendering/: CMakeLists.txt  Main.cpp
Examples/Source/Particles/: CMakeLists.txt  Main.cpp
Examples/Source/PhysicallyBasedShading/: CMakeLists.txt  Main.cpp
Examples/Source/Physics/: CMakeLists.txt  Main.cpp
Examples/Source/SkeletalAnimation/: CMakeLists.txt  Main.cpp
Examples/Source/Terrain/: CMakeLists.txt  Main.cpp
Platform/Linux/Source/: CMakeLists.txt
Platform/MacOS/Source/: CMakeLists.txt
Samples/HelloTriangle/: CMakeLists.txt  main.cpp
Samples/PBRTest/: CMakeLists.txt  main.cpp
Samples/SkyLab/: CMakeLists.txt  main.cpp
Samples/SponzaViewer/: CMakeLists.txt  main.cpp
Samples/TestEditor/: CMakeLists.txt  main.cpp
Source/: CMakeLists.txt
Source/CMake/: B3DEngineConfig.h.in  B3DFrameworkConfig.h.in  B3DShaderBackends.cpp.in  B3DStaticPluginRegistry.h.in  BuiltinAssetUtility.cmake  CompileFlags.cmake  DownloadPackageUtility.cmake  FindPackageUtility.cmake  GenerateDocumentation.cmake  GenerateScriptBindings.cmake  Globbing.cmake  MonoAot.cmake  PostBuild.cmake  Prerequisites.cmake  ProjectDefaults.cmake  RequiredNETAssemblies.txt  RunMonoAotCompiler.cmake  SourceDependencyUtility.cmake  StockIcons.cmake  Utility.cmake
Source/CMake/Modules/: FindBansheeCodeGenerator.cmake  FindDotNETCoreMono.cmake  FindFBXSDK.cmake  FindFLAC.cmake  FindFMOD.cmake  FindGameNetworkingSockets.cmake  FindLibICU.cmake  FindLibUring.cmake  FindMoltenVK.cmake  FindOpenAL.cmake  FindPhysX.cmake  FindRakNet.cmake  FindRenderDoc.cmake  FindSPIRVCross.cmake  FindVulkan.cmake  FindXShaderCompiler.cmake  Findbison.cmake  Findbsf.cmake  Findflex.cmake  Findfreeimg.cmake  Findfreetype.cmake  Findglslang.cmake  Findmono.cmake  Findogg.cmake  Findsnappy.cmake  Findvorbis.cmake
Source/CMake/Scripts/: BuildStockIcons.cmake.in  GenerateDocumentation.cmake.in  GenerateScriptBindings.cmake.in  RunAssetImport.cmake.in
Source/Engine/: CMakeLists.txt
Source/Engine/Core/: B3DApplication.cpp  B3DApplication.h  B3DEntry.h  B3DPrerequisites.h  VSVisualizations.natvis
Source/Engine/Utility/: B3DUtilityPrerequisites.h
Source/Plugins/bsfD3D12GpuBackend/: B3DD3D12Framebuffer.cpp  B3DD3D12Framebuffer.h  B3DD3D12GpuBackend.cpp  B3DD3D12GpuBackend.h  B3DD3D12GpuBuffer.cpp  B3DD3D12GpuBuffer.h  B3DD3D12GpuCommandBuffer.cpp  B3DD3D12GpuCommandBuffer.h  B3DD3D12GpuDevice.cpp  B3DD3D12GpuDevice.h  B3DD3D12GpuParameterSet.cpp  B3DD3D12GpuParameterSet.h  B3DD3D12GpuPipelineParameterLayout.cpp  B3DD3D12GpuPipelineParameterLayout.h  B3DD3D12GpuPipelineState.cpp  B3DD3D12GpuPipelineState.h  B3DD3D12GpuProgram.cpp  B3DD3D12GpuProgram.h  B3DD3D12GpuQueue.cpp  B3DD3D12GpuQueue.h  B3DD3D12Plugin.cpp  B3DD3D12Prerequisites.h  B3DD3D12Queries.cpp  B3DD3D12Queries.h  B3DD3D12RenderTexture.cpp  B3DD3D12RenderTexture.h  B3DD3D12RenderWindowSurface.cpp  B3DD3D12RenderWindowSurface.h  B3DD3D12Resource.cpp  B3DD3D12Resource.h  B3DD3D12ResourceManager.cpp  B3DD3D12ResourceManager.h  B3DD3D12SamplerState.cpp  B3DD3D12SamplerState.h  B3DD3D12ShaderCompiler.cpp  B3DD3D12ShaderCompiler.h  B3DD3D12SwapChain.cpp  B3DD3D12SwapChain.h  B3DD3D12Texture.cpp  B3DD3D12Texture.h  (+4 more)
Source/Plugins/bsfFBXImporter/: B3DFBXImportData.cpp  B3DFBXImportData.h  B3DFBXImporter.cpp  B3DFBXImporter.h  B3DFBXPlugin.cpp  B3DFBXPrerequisites.h  B3DFBXUtility.cpp  B3DFBXUtility.h  BsFBXWin32Resource.rc  CMakeLists.txt
Source/Plugins/bsfFMOD/: B3DFMODAudio.cpp  B3DFMODAudio.h  B3DFMODAudioClip.cpp  (+11 more)
Source/Tests/: B3DFrameworkTestSuiteFactory.cpp  B3DFrameworkTestSuiteFactory.h  B3DNetworkTest.cpp  B3DUnitTestRunner.cpp  CMakeLists.txt
Tools/Benchmark/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/Animation/: AnimationClip.h  AnimationCurve.h  Skeleton.h
src/AssetPipeline/: AssetCooker.cpp  AssetCooker.h  AssetPack.cpp  AssetPack.h  DdsLoader.cpp  DdsLoader.h  GLTFAnimation.cpp  GLTFAnimation.h  GLTFLoader.cpp  GLTFLoader.h  ImageLoader.cpp  ImageLoader.h  ResourceFactory.cpp  ResourceFactory.h  TinyExrImpl.cpp
src/Audio/: Audio.cpp  Audio.h  AudioClip.h  AudioListener.h  AudioSource.h
src/Core/: JobSystem.cpp  JobSystem.h  Json.cpp  Json.h  TaskScheduler.cpp  TaskScheduler.h
src/ECS/: ComponentTypes.cpp  ComponentTypes.h  Components.cpp  Components.h  EntityManager.cpp  EntityManager.h  EventManager.cpp  EventManager.h  PhysicsSync.cpp  PhysicsSync.h  QueryManager.cpp  QueryManager.h  TemplateManager.cpp  TemplateManager.h  World.cpp  World.h
src/EditorAPI/: TucanoAPI.cpp  TucanoAPI.h
src/Input/: InputConfiguration.cpp  InputConfiguration.h  InputFwd.cpp  InputFwd.h  VirtualInput.cpp  VirtualInput.h
src/Physics/: PhysicsTypes.h  PhysicsWorld.cpp  PhysicsWorld.h
src/Platform/: FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  Window.cpp  Window.h
src/RHI/: RHI.h  RHITypes.h
src/Renderer/: Camera.cpp  Camera.h  DevTexture.cpp  DevTexture.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h
src/Runtime/: DebugUI.cpp  DebugUI.h  Screenshot.cpp  Screenshot.h
src/World/: CellId.h  CellPersistence.cpp  CellPersistence.h  FrustumCull.cpp  FrustumCull.h  GpuCellCuller.cpp  GpuCellCuller.h  MovementPredictor.cpp  MovementPredictor.h  StreamingBudget.cpp  StreamingBudget.h  StreamingScheduler.cpp  StreamingScheduler.h  StreamingTypes.h  WorldGrid.cpp  WorldGrid.h
(+2091 files in other folders)
